correct checkout no address url and create address page Ui align update

--- a/public/css/createaddress.css
+++ b/public/css/createaddress.css
@@ -5,6 +5,7 @@
   align-items: center;
   background: linear-gradient(90deg, #1d1e22, #007aff);
   padding: 20px;
+  padding-top: 5rem;
 }
 
 /* Container */
@@ -14,10 +15,9 @@
   background: #ffffff;
   padding: 25px 30px;
   border-radius: 10px;
-  box-shadow: 
-    -10px 0 20px rgba(0, 0, 0, 0.1), /* Left shadow */
-    10px 0 20px rgba(0, 0, 0, 0.1), /* Right shadow */
-    0 8px 16px rgba(0, 0, 0, 0.15); /* Bottom shadow */
+  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.1),
+    /* Left shadow */ 10px 0 20px rgba(0, 0, 0, 0.1),
+    /* Right shadow */ 0 8px 16px rgba(0, 0, 0, 0.15); /* Bottom shadow */
   animation: fadeIn 0.6s ease;
 }
 
